resolve the secondList visibility

--- a/style/product.css
+++ b/style/product.css
@@ -121,7 +121,7 @@ a{color: #000; }
 .header .nav li a{color: #858585; font-size: 16px;}
 .header .nav li a:hover{text-decoration: none;}
 .rightBtn{position: relative;}
-.secondList{position:relative;}
+.secondList{position:relative; z-index: 1;}
 .secondList ul{display: none;position: absolute;}
 .secondList .u1{left: 0;}
 .secondList .u2{left: 33%;}
@@ -148,6 +148,7 @@ a{color: #000; }
 
 .rollBanner{width: 100%; height: 396px; background:#e5e5e5; border-top: 1px solid #ccc;}
 .rollBanner .container{}
+.rollBanner .container .wrap img{position: absolute;}
 
 .indMain .layer{margin: 20px auto 20px; width: 960px;}
 .indMain .layer .txtInfo{font-weight: bold;}
